# termtask

./: LICENSE  pyproject.toml
src/termtask/: __main__.py  cli.py
